--- a/src/index.scss
+++ b/src/index.scss
@@ -1,5 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Jost:wght@100;200;300;400;500;600;700&display=swap");
-* {
+*{
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -7,23 +7,24 @@
   outline: none;
   border: none;
   text-transform: capitalize;
-}
 
+}
 html {
   padding: 0;
   background: #F8F8F7;
   font-size: 50%;
   overflow-x: hidden;
-}
-html::-webkit-scrollbar {
-  width: 1rem;
-}
-html::-webkit-scrollbar-track {
-  background: #FBE0DC;
-}
-html::-webkit-scrollbar-thumb {
-  background: #FF868E;
-  border-radius: 5rem;
-}
 
-/*# sourceMappingURL=index.css.map */
+  &::-webkit-scrollbar {
+    width: 1rem;
+  }
+
+  &::-webkit-scrollbar-track {
+    background: #FBE0DC;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    background: #FF868E;
+    border-radius: 5rem;
+  }
+}
