--- a/src/App.module.css
+++ b/src/App.module.css
@@ -14,7 +14,7 @@
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
-  align-items: flex-end;
+  align-items: center;
   width: 50%;
   height: 60rem;
   margin-top: 2rem;
