finished refactoring breeds page

--- a/src/components/c2-greeting/girl-with-pet/GirlWithPet.module.css
+++ b/src/components/c2-greeting/girl-with-pet/GirlWithPet.module.css
@@ -8,15 +8,15 @@
 .container .background {
   margin: 25px;
   border-radius: 2rem;
-  width: 69rem;
-  height: 83rem;
+  width: 62rem;
+  height: 75rem;
   background: #FBE0DC;
 }
 .container img {
   position: absolute;
   top: 0;
   right: 0;
-  height: 90rem;
+  height: 100%;
 }
 
 /*# sourceMappingURL=GirlWithPet.module.css.map */
