--- a/src/components/c2-greeting/girl-with-pet/GirlWithPet.module.scss
+++ b/src/components/c2-greeting/girl-with-pet/GirlWithPet.module.scss
@@ -7,13 +7,13 @@
   .background{
     margin: 25px;
     border-radius: 2rem;
-    width: 69rem;
-    height: 83rem;
+    width: 62rem;
+    height: 75rem;
     background: #FBE0DC;
   }
   img{
     position: absolute;
     top: 0; right: 0;
-    height: 90rem
+    height: 100%
   }
 }
