--- a/src/components/c3-breeds/Breeds.module.css
+++ b/src/components/c3-breeds/Breeds.module.css
@@ -1,7 +1,7 @@
 .wrapper {
   padding: 2.5rem 2.5rem 2.5rem 2.5rem;
   background: white;
-  margin: 4rem;
+  margin: 1rem 2rem 2rem 2rem;
   border-radius: 2rem;
 }
 .wrapper .header {
