--- a/src/components/c3-breeds/Breeds.module.css
+++ b/src/components/c3-breeds/Breeds.module.css
@@ -21,77 +21,58 @@
   font-family: "Jost", sans-serif;
 }
 .wrapper .gridWrapper {
-  height: 200rem;
   display: grid;
-  grid-auto-columns: 1fr;
+  gap: 20px;
   grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
-  gap: 20px 20px;
-  grid-template-areas: "one two three" "one five five" "four five five" "six seven eight" "ten ten eight" "ten ten nine" "eleven twelve therteen" "eleven fiveteen fiveteen" "fourteen fiveteen fiveteen";
+  grid-auto-columns: 200px;
+  grid-auto-rows: 140px;
+}
+.wrapper .gridWrapper .item1M {
+  grid-column: 1/span 1;
+  grid-row: 1/2 end;
+}
+.wrapper .gridWrapper .item1L {
+  grid-column: 2/4;
+  grid-row: 2/span 2;
+}
+.wrapper .gridWrapper .item2M {
+  grid-column: 3/4;
+  grid-row: 4/5 end;
+}
+.wrapper .gridWrapper .item2L {
+  grid-column: 1/3;
+  grid-row: 5/6 end;
+}
+.wrapper .gridWrapper .item3M {
+  grid-column: 1/span 1;
+  grid-row: 7/8 end;
+}
+.wrapper .gridWrapper .item3L {
+  grid-column: 2/4;
+  grid-row: 8/9 end;
+}
+.wrapper .gridWrapper .item4M {
+  grid-column: 3/4;
+  grid-row: 10/11 end;
+}
+.wrapper .gridWrapper .item4L {
+  grid-column: 1/3;
+  grid-row: 11/12 end;
 }
 .wrapper .gridWrapper div {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   border-radius: 2rem;
   background: #C4C4C4;
+  box-sizing: border-box;
 }
-
-.one {
-  grid-area: one;
-}
-
-.two {
-  grid-area: two;
-}
-
-.three {
-  grid-area: three;
-}
-
-.four {
-  grid-area: four;
-}
-
-.five {
-  grid-area: five;
-}
-
-.six {
-  grid-area: six;
-}
-
-.seven {
-  grid-area: seven;
-}
-
-.eight {
-  grid-area: eight;
-}
-
-.nine {
-  grid-area: nine;
-}
-
-.ten {
-  grid-area: ten;
-}
-
-.eleven {
-  grid-area: eleven;
-}
-
-.twelve {
-  grid-area: twelve;
-}
-
-.therteen {
-  grid-area: therteen;
-}
-
-.fourteen {
-  grid-area: fourteen;
-}
-
-.fiveteen {
-  grid-area: fiveteen;
+.wrapper .gridWrapper div img {
+  width: 100%;
+  height: 100%;
+  border-radius: 2rem;
+  object-fit: cover;
+  background-position: center;
 }
 
 /*# sourceMappingURL=Breeds.module.css.map */
