--- a/src/App.module.css
+++ b/src/App.module.css
@@ -23,4 +23,13 @@
   width: 50%;
 }
 
+@media screen and (max-width: 768px) {
+  .appContainer {
+    flex-direction: column;
+  }
+  .appContainer .content {
+    width: 100%;
+  }
+}
+
 /*# sourceMappingURL=App.module.css.map */
