--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -22,3 +22,13 @@
     width: 50%
   }
 }
+
+@media screen and (max-width: 768px){
+  .appContainer{
+    flex-direction: column;
+    .content{
+      width: 100%;
+    }
+  }
+
+}
