--- a/src/components/c3-breeds/Breeds.module.css
+++ b/src/components/c3-breeds/Breeds.module.css
@@ -60,6 +60,7 @@
   grid-row: 11/12 end;
 }
 .wrapper .gridWrapper div {
+  position: relative;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -73,6 +74,63 @@
   border-radius: 2rem;
   object-fit: cover;
   background-position: center;
+}
+.wrapper .gridWrapper div .overlay {
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
+  width: 100%;
+  height: 100%;
+  background-color: #FF868E99;
+  opacity: 0;
+  transition: 0.3s;
+}
+.wrapper .gridWrapper div .overlay .breedName {
+  padding: 1rem 3rem;
+  color: #FF868E;
+  font-family: "Jost", sans-serif;
+  font-size: 2rem;
+  border-radius: 1rem;
+  background-color: white;
+  cursor: pointer;
+  display: flex;
+  flex-wrap: wrap;
+  margin: 0 1rem 1rem 1rem;
+}
+.wrapper .gridWrapper div .overlay .breedName:hover {
+  background-color: #FF868E;
+  color: white;
+}
+.wrapper .gridWrapper div:hover .overlay {
+  opacity: 1;
+}
+.wrapper .paginator {
+  display: flex;
+  justify-content: center;
+  margin-top: 2rem;
+}
+.wrapper .paginator .page, .wrapper .paginator .currentPage {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 5rem;
+  height: 5rem;
+  background-color: white;
+  border-radius: 1rem;
+  color: #FF868E;
+  cursor: pointer;
+  font-family: "Jost", sans-serif;
+  font-size: 2rem;
+  margin-left: 1rem;
+}
+.wrapper .paginator .page:hover, .wrapper .paginator .currentPage:hover {
+  background-color: #FBE0DC;
+  color: white;
+}
+.wrapper .paginator .currentPage {
+  background-color: #FF868E;
+  color: white;
 }
 
 /*# sourceMappingURL=Breeds.module.css.map */
