--- a/src/components/c3-breeds/Breeds.module.scss
+++ b/src/components/c3-breeds/Breeds.module.scss
@@ -58,6 +58,7 @@
       grid-row: 11 / 12 end;
     }
     div{
+      position: relative;
       display: flex;
       justify-content: center;
       align-items: center;
@@ -71,6 +72,63 @@
         object-fit: cover;
         background-position: center;
       }
+      .overlay{
+        position: absolute;
+        display: flex;
+        justify-content: center;
+        align-items: flex-end;
+        width: 100%;
+        height: 100%;
+        background-color: #FF868E99;
+        opacity: 0;
+        transition: .3s;
+        .breedName{
+          padding: 1rem 3rem;
+          color: #FF868E;
+          font-family: "Jost", sans-serif;
+          font-size: 2rem;
+          border-radius: 1rem;
+          background-color: white;
+          cursor: pointer;
+          display: flex;
+          flex-wrap: wrap;
+          margin: 0 1rem 1rem 1rem;
+          &:hover {
+            background-color: #FF868E;
+            color: white;
+          }
+        }
+      }
+      &:hover .overlay {
+        opacity: 1;
+      }
+    }
+  }
+  .paginator {
+    display: flex;
+    justify-content: center;
+    margin-top: 2rem;
+    .page, .currentPage{
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      width: 5rem;
+      height: 5rem;
+      background-color: white;
+      border-radius: 1rem;
+      color: #FF868E;
+      cursor: pointer;
+      font-family: "Jost", sans-serif;
+      font-size: 2rem;
+      margin-left: 1rem;
+      &:hover{
+        background-color: #FBE0DC;
+        color: white;
+      }
+    }
+    .currentPage{
+      background-color: #FF868E;
+      color: white;
     }
   }
 }
