--- a/src/components/c1-common/select/Select.module.css
+++ b/src/components/c1-common/select/Select.module.css
@@ -1,7 +1,5 @@
-.container .containerWrapper {
-  position: relative;
-}
 .container .containerWrapper .select {
+  width: 100%;
   -moz-appearance: none;
   -webkit-appearance: none;
   appearance: none;
