--- a/src/components/c1-common/select/Select.module.scss
+++ b/src/components/c1-common/select/Select.module.scss
@@ -1,7 +1,7 @@
 .container{
   .containerWrapper{
-    position: relative;
     .select{
+      width: 100%;
       -moz-appearance: none;
       -webkit-appearance: none;
       appearance: none;
