--- a/src/components/c2-greeting/Greeting.module.scss
+++ b/src/components/c2-greeting/Greeting.module.scss
@@ -1,4 +1,3 @@
-
 $font-family: 'Jost', sans-serif;
 
 .container{
@@ -32,6 +31,16 @@ $font-family: 'Jost', sans-serif;
       display: flex;
       justify-content: space-between;
       align-items: center;
+    }
+  }
+}
+@media screen and (max-width: 768px){
+  .container{
+    .itemsContainer{
+      .items{
+        width: 100%;
+       flex-direction: column;
+      }
     }
   }
 }
