--- a/src/components/c3-breeds/Breeds.module.css
+++ b/src/components/c3-breeds/Breeds.module.css
@@ -1,11 +1,16 @@
 .wrapper {
-  padding: 2.5rem 2.5rem 2.5rem 2.5rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  min-height: 79rem;
+  padding: 2.5rem;
   background: white;
   margin: 1rem 2rem 2rem 2rem;
   border-radius: 2rem;
 }
 .wrapper .header {
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-between;
   margin-bottom: 2rem;
 }
@@ -19,6 +24,11 @@
   font-weight: 500;
   letter-spacing: 0.2rem;
   font-family: "Jost", sans-serif;
+}
+.wrapper .header .filters {
+  min-width: 25rem;
+  display: flex;
+  justify-content: space-between;
 }
 .wrapper .gridWrapper {
   display: grid;
@@ -114,6 +124,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  align-self: flex-end;
   width: 5rem;
   height: 5rem;
   background-color: white;
@@ -122,7 +133,6 @@
   cursor: pointer;
   font-family: "Jost", sans-serif;
   font-size: 2rem;
-  margin-left: 1rem;
 }
 .wrapper .paginator .page:hover, .wrapper .paginator .currentPage:hover {
   background-color: #FBE0DC;
@@ -131,6 +141,18 @@
 .wrapper .paginator .currentPage {
   background-color: #FF868E;
   color: white;
+}
+
+@media screen and (max-width: 480px) {
+  .wrapper .header > * {
+    margin-bottom: 1rem;
+  }
+  .wrapper .gridWrapper {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+  }
 }
 
 /*# sourceMappingURL=Breeds.module.css.map */
