--- a/src/components/c3-breeds/Breeds.module.scss
+++ b/src/components/c3-breeds/Breeds.module.scss
@@ -1,10 +1,15 @@
 .wrapper {
-  padding: 2.5rem 2.5rem 2.5rem 2.5rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  min-height: 79rem;
+  padding: 2.5rem;
   background: white;
   margin: 1rem 2rem 2rem 2rem;
   border-radius: 2rem;
   .header {
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
     margin-bottom: 2rem;
     span{
@@ -17,6 +22,11 @@
       font-weight: 500;
       letter-spacing: .2rem;
       font-family: 'Jost', sans-serif;
+    }
+    .filters{
+      min-width: 25rem;
+      display: flex;
+      justify-content: space-between;
     }
   }
   .gridWrapper {
@@ -112,6 +122,7 @@
       display: flex;
       justify-content: center;
       align-items: center;
+      align-self: flex-end;
       width: 5rem;
       height: 5rem;
       background-color: white;
@@ -120,7 +131,6 @@
       cursor: pointer;
       font-family: "Jost", sans-serif;
       font-size: 2rem;
-      margin-left: 1rem;
       &:hover{
         background-color: #FBE0DC;
         color: white;
@@ -133,4 +143,16 @@
   }
 }
 
-
+@media screen and (max-width: 480px){
+  .wrapper{
+    .header > *{
+      margin-bottom: 1rem;
+    }
+    .gridWrapper{
+      display: flex;
+      flex-direction: column;
+      justify-content: flex-start;
+      align-items: center;
+    }
+  }
+}
