--- a/src/components/c4-header/Header.module.css
+++ b/src/components/c4-header/Header.module.css
@@ -4,13 +4,53 @@
   align-items: center;
   margin: 2rem 2rem 0 2rem;
 }
+.container .hamburgerContainer {
+  position: absolute;
+  top: -200px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 5rem;
+  height: 5rem;
+  border-radius: 1rem;
+  background-color: white;
+  cursor: pointer;
+}
+.container .hamburgerContainer .hamburger {
+  width: 2rem;
+  transition: 0.3s;
+}
+.container .hamburgerContainer:hover .hamburger * {
+  fill: white;
+}
+.container .hamburgerContainer:hover {
+  background-color: #FF868E;
+}
 .container .searchBlock {
   width: 78%;
 }
 .container .pageLinkersBlock {
   display: flex;
   justify-content: space-between;
-  width: 20%;
+  width: 18rem;
+}
+
+@media screen and (max-width: 768px) {
+  .container {
+    flex-wrap: wrap;
+  }
+  .container .hamburgerContainer {
+    position: relative;
+    top: 0;
+  }
+  .container .searchBlock {
+    order: 3;
+    width: 100%;
+    margin-top: 1rem;
+  }
+  .container .pageLinkersBlock {
+    order: 2;
+  }
 }
 
 /*# sourceMappingURL=Header.module.css.map */
