--- a/src/components/c4-header/Header.module.scss
+++ b/src/components/c4-header/Header.module.scss
@@ -3,12 +3,59 @@
   justify-content: space-between;
   align-items: center;
   margin: 2rem 2rem 0 2rem;
+  .hamburgerContainer{
+    position: absolute;
+    top: -200px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 5rem;
+    height: 5rem;
+    border-radius: 1rem;
+    background-color: white;
+    cursor: pointer;
+    .hamburger{
+      width: 2rem;
+      transition: .3s;
+    }
+    &:hover .hamburger * {
+      fill: white;
+    }
+    &:hover {
+      background-color: #FF868E;
+    }
+  }
   .searchBlock{
     width: 78%;
   }
   .pageLinkersBlock{
     display: flex;
     justify-content: space-between;
-    width: 20%;
+    width: 18rem;
+  }
+}
+
+@media screen and (max-width: 480px){
+  .container{
+    .pageLinkersBlock{
+    }
+  }
+}
+
+@media screen and (max-width: 768px){
+  .container{
+    flex-wrap: wrap;
+    .hamburgerContainer{
+      position: relative;
+      top:0;
+    }
+    .searchBlock {
+      order: 3;
+      width: 100%;
+      margin-top: 1rem;
+    }
+    .pageLinkersBlock{
+      order: 2;
+    }
   }
 }
