fixed bug without window width

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -29,8 +29,8 @@
     flex-direction: column;
   }
   .appContainer .greeting {
-    visibility: hidden;
     position: absolute;
+    left: -500px;
   }
   .appContainer .content {
     width: 100%;
