--- a/src/components/c1-common/select/Select.module.css
+++ b/src/components/c1-common/select/Select.module.css
@@ -1,5 +1,7 @@
+.container .containerWrapper {
+  position: relative;
+}
 .container .containerWrapper .select {
-  width: 100%;
   -moz-appearance: none;
   -webkit-appearance: none;
   appearance: none;
@@ -27,6 +29,18 @@
   top: 2rem;
   right: 1.5rem;
   pointer-events: none;
+}
+
+@media screen and (max-width: 768px) {
+  .container {
+    width: 100%;
+  }
+  .container .containerWrapper {
+    width: 100%;
+  }
+  .container .containerWrapper .select {
+    width: 100%;
+  }
 }
 
 /*# sourceMappingURL=Select.module.css.map */
