--- a/src/components/c2-greeting/Greeting.module.css
+++ b/src/components/c2-greeting/Greeting.module.css
@@ -29,10 +29,54 @@
   align-items: center;
 }
 
-@media screen and (max-width: 768px) {
-  .container .itemsContainer .items {
+@media screen and (max-width: 480px) {
+  .container {
+    padding: 2rem;
     width: 100%;
+    height: 100%;
+    display: flex;
     flex-direction: column;
+    justify-content: center;
+    align-content: center;
+  }
+  .container .itemsContainer .items {
+    flex-direction: column;
+  }
+  .container .itemsContainer .items > div {
+    width: 100%;
+  }
+  .container .itemsContainer .items > div > div {
+    position: absolute;
+    visibility: hidden;
+  }
+}
+@media screen and (max-width: 768px) {
+  .container {
+    padding: 2rem;
+    width: 100%;
+    height: 60%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-content: center;
+  }
+  .container .greeting {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  .container .itemsContainer {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  .container .itemsContainer .items {
+    display: flex;
+    justify-content: center;
+    gap: 1rem;
+    width: 100%;
   }
 }
 
