--- a/src/components/c2-greeting/Greeting.module.scss
+++ b/src/components/c2-greeting/Greeting.module.scss
@@ -1,45 +1,94 @@
 $font-family: 'Jost', sans-serif;
 
-.container{
+.container {
   position: fixed;
   height: 60rem;
   width: 60rem;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  .greeting{
-    h4{
+
+  .greeting {
+    h4 {
       font-family: $font-family;
       font-size: 4rem;
       font-weight: 500;
       margin: 1.5rem 0;
     }
-    span{
+
+    span {
       font-family: $font-family;
       font-size: 1.8rem;
       color: gray;
     }
   }
-  .itemsContainer{
-    h4{
+
+  .itemsContainer {
+    h4 {
       font-family: $font-family;
       font-size: 2rem;
       font-weight: 500;
       margin-bottom: 1.5rem;
     }
-    .items{
+
+    .items {
       display: flex;
       justify-content: space-between;
       align-items: center;
     }
   }
 }
-@media screen and (max-width: 768px){
-  .container{
-    .itemsContainer{
-      .items{
+
+@media screen and (max-width: 480px) {
+  .container {
+    padding: 2rem;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;
+    .itemsContainer {
+      .items {
+        flex-direction: column;
+        & > div {
+          width: 100%;
+        }
+        & > div > div {
+          position: absolute;
+          visibility: hidden;
+        }
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .container {
+    padding: 2rem;
+    width: 100%;
+    height: 60%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-content: center;
+    .greeting{
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+
+    }
+    .itemsContainer {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      .items {
+        display: flex;
+        justify-content: center;
+        gap: 1rem;
         width: 100%;
-       flex-direction: column;
       }
     }
   }
