--- a/src/components/c3-breeds/Breeds.module.css
+++ b/src/components/c3-breeds/Breeds.module.css
@@ -14,7 +14,12 @@
   justify-content: space-between;
   margin-bottom: 2rem;
 }
-.wrapper .header span {
+.wrapper .header .navigate {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1rem;
+}
+.wrapper .header .navigate span {
   display: inline-block;
   border-radius: 1rem;
   background-color: #FF868E;
@@ -26,9 +31,16 @@
   font-family: "Jost", sans-serif;
 }
 .wrapper .header .filters {
-  min-width: 25rem;
+  min-width: 30rem;
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-between;
+}
+.wrapper .header .filters .sortBlock {
+  min-width: 15rem;
+  display: flex;
+  justify-content: flex-end;
+  gap: 1rem;
 }
 .wrapper .gridWrapper {
   display: grid;
@@ -144,14 +156,35 @@
 }
 
 @media screen and (max-width: 480px) {
-  .wrapper .header > * {
-    margin-bottom: 1rem;
-  }
   .wrapper .gridWrapper {
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
+  }
+}
+@media screen and (max-width: 768px) {
+  .wrapper .gridWrapper {
+    gap: 10px;
+  }
+  .wrapper .header .navigate {
+    margin-bottom: 1rem;
+  }
+  .wrapper .header select {
+    margin-bottom: 1rem;
+  }
+  .wrapper .header .filters {
+    min-width: auto;
+    width: 100%;
+    flex-wrap: nowrap;
+    gap: 1rem;
+  }
+  .wrapper .header .filters .sortBlock {
+    min-width: auto;
+    justify-content: space-between;
+  }
+  .wrapper .header .filters > :first-child {
+    width: 70%;
   }
 }
 
