added breed info header

--- a/src/components/c3-breeds/breedInfo/BreedInfo.module.css
+++ b/src/components/c3-breeds/breedInfo/BreedInfo.module.css
@@ -7,8 +7,38 @@
   margin: 1rem 2rem 2rem 2rem;
   border-radius: 2rem;
 }
+.wrapper .header {
+  display: flex;
+  justify-content: flex-start;
+  gap: 2rem;
+  margin-bottom: 2rem;
+}
+.wrapper .header span {
+  display: block;
+  border-radius: 1rem;
+  color: white;
+  padding: 1rem 3rem 1rem 3rem;
+  font-size: 2rem;
+  font-weight: 500;
+  letter-spacing: 0.2rem;
+  font-family: "Jost", sans-serif;
+}
+.wrapper .header .revPageTitle {
+  background-color: #FBE0DC;
+  color: #FF868E;
+  cursor: pointer;
+}
+.wrapper .header .revPageTitle:hover {
+  background-color: #FF868E;
+  color: white;
+}
+.wrapper .header .breedId {
+  background-color: #FF868E;
+}
 .wrapper .content {
   height: 74rem;
+  display: flex;
+  flex-direction: column;
 }
 .wrapper .content .imageBlock {
   position: relative;
@@ -42,6 +72,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  flex-wrap: wrap;
 }
 .wrapper .content .blockInfo .info * {
   text-transform: none;
@@ -78,6 +109,27 @@
   flex-wrap: wrap;
   width: 45%;
   color: #8c8c8c;
+}
+
+@media screen and (max-width: 768px) {
+  .wrapper .content .blockInfo .title {
+    font-size: 4rem;
+  }
+}
+@media screen and (max-width: 480px) {
+  .wrapper .content {
+    height: 80vh;
+  }
+  .wrapper .content .blockInfo .title {
+    font-size: 2.5rem;
+    top: -2.5rem;
+  }
+  .wrapper .content .blockInfo .info .bredFor {
+    font-size: 2rem;
+  }
+  .wrapper .content .blockInfo .info .otherInfo {
+    font-size: 1.5rem;
+  }
 }
 
 /*# sourceMappingURL=BreedInfo.module.css.map */
