--- a/src/components/c1-common/carousel/Carousel.module.css
+++ b/src/components/c1-common/carousel/Carousel.module.css
@@ -10,7 +10,8 @@
 .container .slide {
   width: 100%;
   height: 100%;
-  opacity: 1;
+  position: absolute;
+  opacity: 0;
   transition: opacity ease-in-out 0.4s;
 }
 .container .slide img {
@@ -20,15 +21,14 @@
   border-radius: 2rem;
 }
 .container .activeAnim {
-  width: 100%;
-  height: 100%;
   opacity: 1;
-  transition: opacity ease-in-out 0.4s;
 }
 .container .dots {
   position: absolute;
   display: flex;
   align-items: center;
+  flex-wrap: wrap;
+  max-width: 80%;
   background: white;
   padding: 1rem;
   border-radius: 2rem;
