--- a/src/components/c1-common/carousel/Carousel.module.scss
+++ b/src/components/c1-common/carousel/Carousel.module.scss
@@ -10,9 +10,9 @@
   .slide{
     width: 100%;
     height: 100%;
-    opacity: 1;
+    position: absolute;
+    opacity: 0;
     transition: opacity ease-in-out 0.4s;
-
     img {
       width: 100%;
       height: 100%;
@@ -21,16 +21,15 @@
     }
   }
   .activeAnim{
-    width: 100%;
-    height: 100%;
     opacity: 1;
-    transition: opacity ease-in-out 0.4s;
   }
 
   .dots {
     position: absolute;
     display: flex;
     align-items: center;
+    flex-wrap: wrap;
+    max-width: 80%;
     background: white;
     padding: 1rem;
     border-radius: 2rem;
