--- a/src/components/c1-common/loader/Loader.module.css
+++ b/src/components/c1-common/loader/Loader.module.css
@@ -1,11 +1,12 @@
 .container {
+  width: 100%;
+  height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 .container img {
-  width: 20%;
-  height: 20%;
+  height: 20vh;
 }
 
 /*# sourceMappingURL=Loader.module.css.map */
