--- a/src/components/c1-common/loader/Loader.module.scss
+++ b/src/components/c1-common/loader/Loader.module.scss
@@ -1,9 +1,10 @@
 .container {
+  width: 100%;
+  height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
   img{
-    width: 20%;
-    height: 20%;
+    height: 20vh
   }
 }
