--- a/src/components/c3-breeds/breedInfo/BreedInfo.module.scss
+++ b/src/components/c3-breeds/breedInfo/BreedInfo.module.scss
@@ -2,12 +2,14 @@
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  padding: 2.5rem;
+  padding: 2.5rem 2.5rem 0 2.5rem;
   background: white;
-  margin: 1rem 2rem 2rem 2rem;
+  margin: 1rem 2rem 0 2rem;
   border-radius: 2rem;
+  min-height: 80rem;
   .header{
     display: flex;
+    flex-wrap: wrap;
     justify-content: flex-start;
     gap: 2rem;
     margin-bottom: 2rem;
@@ -21,7 +23,7 @@
       letter-spacing: .2rem;
       font-family: 'Jost', sans-serif;
     }
-    .revPageTitle{
+    .prevPageTitle{
       background-color: #FBE0DC;
       color: #FF868E;
       cursor: pointer;
@@ -35,13 +37,13 @@
     }
   }
   .content {
-    height: 74rem;
+    height: 70rem;
     display: flex;
     flex-direction: column;
     .imageBlock {
       position: relative;
       width: 100%;
-      height: 55%;
+      height: 50%;
       margin-bottom: 6rem;
     }
     .blockInfo {
@@ -121,7 +123,12 @@
 
 @media screen and (max-width: 768px){
   .wrapper{
+    height: 85vh;
     .content{
+      height: 75vh;
+      .imageBlock{
+        height: 80%;
+      }
       .blockInfo{
         .title{
           font-size: 4rem;
@@ -132,8 +139,12 @@
 }
 @media screen and (max-width: 480px){
   .wrapper{
+    height: 85vh;
     .content{
-      height: 80vh;
+      height: 75vh;
+      .imageBlock{
+        height: 80%;
+      }
       .blockInfo{
         .title{
           font-size: 2.5rem;
