--- a/src/components/c1-common/group-button/GroupButton.module.css
+++ b/src/components/c1-common/group-button/GroupButton.module.css
@@ -3,8 +3,10 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  border-radius: 2.5rem;
-  border: 0.5rem solid white;
+  border-radius: 3rem;
+  background-color: white;
+  padding: 0.5rem;
+  gap: 0.5rem;
 }
 .content .smile, .content .sad, .content .heart {
   height: 8rem;
@@ -12,25 +14,42 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  cursor: pointer;
 }
 .content .smile > .img *, .content .sad > .img *, .content .heart > .img * {
   fill: white;
 }
-.content .smile:hover, .content .sad:hover, .content .heart:hover {
-  opacity: 0.3;
+.content .smile:active > .img *, .content .sad:active > .img *, .content .heart:active > .img * {
+  fill: white;
 }
 .content .smile {
   background-color: #97EAB9;
   border-radius: 2.5rem 0 0 2.5rem;
-  border-right: 0.5rem solid white;
+}
+.content .smile:hover:not(:active) {
+  background-color: #97EAB94D;
+}
+.content .smile:hover:not(:active) > .img * {
+  fill: #97EAB9;
 }
 .content .sad {
   background-color: #FFD280;
   border-radius: 0 2.5rem 2.5rem 0;
-  border-left: 0.5rem solid white;
+}
+.content .sad:hover:not(:active) {
+  background-color: #FFD2804D;
+}
+.content .sad:hover:not(:active) > .img * {
+  fill: #FFD280;
 }
 .content .heart {
   background-color: #FF868E;
+}
+.content .heart:hover:not(:active) {
+  background-color: #FF868E4D;
+}
+.content .heart:hover:not(:active) > .img * {
+  fill: #FF868E;
 }
 
 /*# sourceMappingURL=GroupButton.module.css.map */
