--- a/src/components/c2-greeting/content-item/ContentItem.module.css
+++ b/src/components/c2-greeting/content-item/ContentItem.module.css
@@ -23,7 +23,7 @@
   line-height: 2;
   font-family: "Jost", sans-serif;
   cursor: pointer;
-  background: white;
+  background: var(--bgContentItems);
   transition: 0.2s;
 }
 .container button:hover {
