--- a/src/components/c2-greeting/content-item/ContentItem.module.scss
+++ b/src/components/c2-greeting/content-item/ContentItem.module.scss
@@ -24,7 +24,7 @@
     line-height: 2;
     font-family: 'Jost', sans-serif;
     cursor: pointer;
-    background: white;
+    background: var(--bgContentItems);
     transition: .2s;
     &:hover{
       background: #FBE0DC;
