--- a/src/components/c6-voting/Voting.module.css
+++ b/src/components/c6-voting/Voting.module.css
@@ -1,9 +1,10 @@
 .container {
+  position: relative;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
   padding: 2.5rem 2.5rem 0 2.5rem;
-  background: white;
+  background: var(--bg);
   margin: 1rem 2rem 0 2rem;
   border-radius: 2rem;
   min-height: 80rem;
@@ -25,6 +26,69 @@
   font-weight: 500;
   letter-spacing: 0.2rem;
   font-family: "Jost", sans-serif;
+}
+.container .voting {
+  position: relative;
+  height: 40rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.container .voting .img {
+  width: 100%;
+  height: 100%;
+}
+.container .voting .img img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 2.5rem;
+}
+.container .voting div {
+  bottom: -4rem;
+}
+.container .logMessage {
+  display: flex;
+  flex-direction: column;
+  box-sizing: border-box;
+  font-family: "Jost", sans-serif;
+  width: 100%;
+  height: 23rem;
+  overflow-y: scroll;
+  margin-top: 5rem;
+  gap: 10px;
+}
+.container .logMessage::-webkit-scrollbar {
+  display: none;
+}
+.container .logMessage .message {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+  align-items: center;
+  padding: 2rem;
+  background-color: var(--bg);
+  border-radius: 1.2rem;
+  gap: 30px;
+  transition: 0.3s;
+}
+.container .logMessage .message .date {
+  padding: 0.5rem 1rem;
+  background-color: var(--bgApp);
+  border-radius: 0.5rem;
+  font-size: 2rem;
+}
+.container .logMessage .message .text {
+  font-family: "Jost", sans-serif;
+  font-size: 2rem;
+  text-transform: none;
+  line-height: 3rem;
+  color: #8c8c8c;
+}
+.container .logMessage .message .text span {
+  font-weight: 500;
+  color: var(--color);
 }
 
 /*# sourceMappingURL=Voting.module.css.map */
