--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -8,6 +8,7 @@
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
+  background-color: var(--bgApp);
   .greeting{
     display: flex;
     flex-direction: column;
@@ -34,4 +35,20 @@
       width: 100%;
     }
   }
+}
+* {
+  color: var(--color);
+}
+.themeWhite {
+  --color: #000;
+  --bgApp: #F8F8F7;
+  --bgContentItems: #fff;
+  --bg: #fff;
+}
+
+.themeDark {
+  --color: #fff;
+  --bgApp: #1D1D1D;
+  --bgContentItems: rgba(255, 255, 255, 0.1);
+  --bg: rgba(255, 255, 255, 0.05);
 }
