--- a/src/components/c1-common/page-linker/PageLinker.module.css
+++ b/src/components/c1-common/page-linker/PageLinker.module.css
@@ -5,7 +5,7 @@
   height: 5rem;
   width: 5rem;
   border-radius: 1rem;
-  background: white;
+  background: var(--bg);
   cursor: pointer;
 }
 .container:hover {
