--- a/src/components/c5-navmenu/NavMenu.module.css
+++ b/src/components/c5-navmenu/NavMenu.module.css
@@ -18,7 +18,7 @@
   cursor: pointer;
 }
 .container .closeIconContainer:hover {
-  background-color: #FF868E;
+  background-color: var(--color);
 }
 .container .closeIconContainer:hover .closeIcon * {
   fill: white;
