--- a/src/components/c1-common/sort-button/SortButton.module.css
+++ b/src/components/c1-common/sort-button/SortButton.module.css
@@ -4,13 +4,13 @@
   align-items: center;
   width: 5rem;
   height: 5rem;
-  border: 2px solid #F8F8F7;
+  border: 2px solid var(--bg);
   border-radius: 1rem;
-  background: #F8F8F7;
+  background: var(--bgSelect);
   cursor: pointer;
 }
 .container:hover {
-  border: 2px solid #FBE0DC;
+  border: 2px solid var(--opac20bg);
 }
 .container:hover .sort * {
   fill: #FF868E;
