--- a/src/components/c2-greeting/girl-with-pet/GirlWithPet.module.scss
+++ b/src/components/c2-greeting/girl-with-pet/GirlWithPet.module.scss
@@ -9,7 +9,7 @@
     border-radius: 2rem;
     width: 70rem;
     height: 83rem;
-    background: #FBE0DC;
+    background: var(--bg);
   }
   img{
     position: absolute;
