--- a/src/components/c3-breeds/breedInfo/BreedInfo.module.css
+++ b/src/components/c3-breeds/breedInfo/BreedInfo.module.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   justify-content: flex-start;
   padding: 2.5rem 2.5rem 0 2.5rem;
-  background: white;
+  background: var(--bg);
   margin: 1rem 2rem 0 2rem;
   border-radius: 2rem;
   min-height: 80rem;
@@ -16,7 +16,8 @@
   margin-bottom: 2rem;
 }
 .wrapper .header span {
-  display: block;
+  display: flex;
+  align-items: center;
   border-radius: 1rem;
   color: white;
   padding: 1rem 3rem 1rem 3rem;
@@ -26,7 +27,7 @@
   font-family: "Jost", sans-serif;
 }
 .wrapper .header .prevPageTitle {
-  background-color: #FBE0DC;
+  background-color: var(--opac20bg);
   color: #FF868E;
   cursor: pointer;
 }
@@ -65,8 +66,8 @@
   font-size: 4rem;
   font-weight: 500;
   display: block;
-  top: -3.5rem;
-  background-color: white;
+  top: -2.5rem;
+  background-color: var(--bgBreedName);
   padding: 0 3rem;
 }
 .wrapper .content .blockInfo .info {
@@ -92,7 +93,7 @@
   flex-wrap: wrap;
 }
 .wrapper .content .blockInfo .info .otherInfo > div > div > span {
-  color: black;
+  color: var(--color);
   font-weight: 500;
   display: inline-block;
   padding-bottom: 0.5rem;
