--- a/src/components/c1-common/back-button/BackButton.module.scss
+++ b/src/components/c1-common/back-button/BackButton.module.scss
@@ -2,7 +2,7 @@
   height: 5rem;
   width: 5rem;
   border-radius: 1rem;
-  background: #FBE0DC;
+  background: var(--opac20bg);
   display: flex;
   justify-content: center;
   align-items: center;
