--- a/src/components/c1-common/carousel/Carousel.module.scss
+++ b/src/components/c1-common/carousel/Carousel.module.scss
@@ -30,7 +30,7 @@
     align-items: center;
     flex-wrap: wrap;
     max-width: 80%;
-    background: white;
+    background: var(--bgBreedName);
     padding: 1rem;
     border-radius: 2rem;
     gap: 5px;
@@ -40,7 +40,7 @@
       width: 1.5rem;
       height: 1.5rem;
       border-radius: 50%;
-      background: #FBE0DC;
+      background: var(--opac20bg);
       cursor: pointer;
 
       &:hover {
