--- a/src/components/c1-common/group-button/GroupButton.module.css
+++ b/src/components/c1-common/group-button/GroupButton.module.css
@@ -4,7 +4,7 @@
   justify-content: center;
   align-items: center;
   border-radius: 3rem;
-  background-color: white;
+  background-color: var(--bgBreedName);
   padding: 0.5rem;
   gap: 0.5rem;
 }
