--- a/src/components/c1-common/group-button/GroupButton.module.scss
+++ b/src/components/c1-common/group-button/GroupButton.module.scss
@@ -4,7 +4,7 @@
   justify-content: center;
   align-items: center;
   border-radius: 3rem;
-  background-color: white;
+  background-color: var(--bgBreedName);
   padding: .5rem;
   gap: .5rem;
   .smile, .sad, .heart{
