--- a/src/components/c1-common/logo/Logo.module.css
+++ b/src/components/c1-common/logo/Logo.module.css
@@ -2,10 +2,13 @@
   display: flex;
   align-items: center;
 }
-.container img {
+.container .img {
   width: 3rem;
   height: 3rem;
   transform: rotate(-45deg);
+}
+.container .img * {
+  fill: #FF868E;
 }
 .container span {
   display: inline-block;
