--- a/src/components/c1-common/logo/Logo.module.scss
+++ b/src/components/c1-common/logo/Logo.module.scss
@@ -2,10 +2,13 @@
   display: flex;
   align-items: center;
 
-  img{
+  .img{
     width: 3rem;
     height: 3rem;
     transform: rotate(-45deg);
+    & * {
+      fill: #FF868E;
+    }
   }
   span{
     display: inline-block;
