--- a/src/components/c1-common/search-button/SearchButton.module.scss
+++ b/src/components/c1-common/search-button/SearchButton.module.scss
@@ -5,7 +5,7 @@
   height: 4rem;
   width: 4rem;
   border-radius: 1rem;
-  background: #FBE0DC;
+  background: var(--opac20bg);
   cursor: pointer;
   &:hover {
     background: #FF868E;
