--- a/src/components/c1-common/search-input/SearchInput.module.css
+++ b/src/components/c1-common/search-input/SearchInput.module.css
@@ -4,30 +4,20 @@
   align-items: center;
   padding: 0.5rem 0.5rem 0.5rem 1rem;
   box-sizing: border-box;
-  border: 2px solid #F8F8F7;
+  border: 2px solid var(--bg);
   border-radius: 1.5rem;
-  background: white;
+  background: var(--bg);
 }
 .container:hover {
-  border: 2px solid #FBE0DC;
-}
-.container:focus {
-  border: 2px solid #FF868E;
+  border: 2px solid var(--opac20bg);
 }
 .container input {
   outline: none;
   border: none;
-  color: #8C8C8C;
+  color: var(--color);
   background: transparent;
   font-family: "Jost", sans-serif;
   width: 90%;
-}
-.container input:focus {
-  color: black;
-}
-
-.focus {
-  border: 2px solid #FF868E;
 }
 
 /*# sourceMappingURL=SearchInput.module.css.map */
