--- a/src/components/c1-common/search-input/SearchInput.module.scss
+++ b/src/components/c1-common/search-input/SearchInput.module.scss
@@ -4,27 +4,18 @@
   align-items: center;
   padding: .5rem .5rem .5rem 1rem;
   box-sizing: border-box;
-  border: 2px solid #F8F8F7;
+  border: 2px solid var(--bg);
   border-radius: 1.5rem;
-  background: white;
+  background: var(--bg);
   &:hover {
-    border: 2px solid #FBE0DC;
-  }
-  &:focus {
-    border: 2px solid #FF868E;
+    border: 2px solid var(--opac20bg);
   }
   input{
     outline: none;
     border: none;
-    color: #8C8C8C;
+    color: var(--color);
     background: transparent;
     font-family: "Jost", sans-serif;
     width: 90%;
-    &:focus{
-      color: black;
-    }
   }
-}
-.focus {
-  border: 2px solid #FF868E;
 }
