--- a/src/components/c1-common/select/Select.module.scss
+++ b/src/components/c1-common/select/Select.module.scss
@@ -1,30 +1,41 @@
-.container{
-  .containerWrapper{
+.container {
+  .containerWrapper {
     position: relative;
-    .select{
+
+    .select {
       -moz-appearance: none;
       -webkit-appearance: none;
       appearance: none;
       height: 5rem;
       border-radius: 1rem;
-      background: #F8F8F7;
+      background: var(--bgSelect);
       outline: none;
       padding: 0 3rem 0 1rem;
       font-family: "Jost", sans-serif;
       cursor: pointer;
       color: #8C8C8C;
-      border: 2px solid #F8F8F7;
+      border: 2px solid var(--bg);
+
+      & > option {
+        color: var(--colorOption);
+        background-color: var(--bgOption);
+        padding: .5rem;
+      }
+
       &:hover + .arrow * {
         fill: #FF868E;
       }
-      &:hover{
-        border: 2px solid #FBE0DC;
+
+      &:hover {
+        border: 2px solid var(--opac20bg);
       }
-      &:active{
+
+      &:active {
         border: 2px solid #F8F8F7;
       }
     }
-    .arrow{
+
+    .arrow {
       position: absolute;
       top: 2rem;
       right: 1.5rem;
@@ -32,12 +43,15 @@
     }
   }
 }
-@media screen and (max-width: 768px){
-  .container{
+
+@media screen and (max-width: 768px) {
+  .container {
     width: 100%;
-    .containerWrapper{
+
+    .containerWrapper {
       width: 100%;
-      .select{
+
+      .select {
         width: 100%;
       }
     }
