--- a/src/components/c3-breeds/Breeds.module.scss
+++ b/src/components/c3-breeds/Breeds.module.scss
@@ -4,7 +4,7 @@
   justify-content: flex-start;
   min-height: 79rem;
   padding: 2.5rem;
-  background: white;
+  background: var(--bg);
   margin: 1rem 2rem 2rem 2rem;
   border-radius: 2rem;
   .header {
@@ -17,15 +17,17 @@
       flex-wrap: wrap;
       gap: 2rem;
       span{
-        display: inline-block;
+        display: flex;
+        align-items: center;
         border-radius: 1rem;
         background-color: #FF868E;
         color: white;
-        padding: 1rem 3rem 1rem 3rem;
+        padding: 1rem 3rem;
         font-size: 2rem;
         font-weight: 500;
         letter-spacing: .2rem;
         font-family: 'Jost', sans-serif;
+
       }
     }
     .filters{
@@ -106,11 +108,11 @@
         transition: .3s;
         .breedName{
           padding: 1rem 3rem;
-          color: #FF868E;
+          color: var(--bredNameColor);
           font-family: "Jost", sans-serif;
           font-size: 2rem;
           border-radius: 1rem;
-          background-color: white;
+          background-color: var(--bgBreedName);
           cursor: pointer;
           display: flex;
           flex-wrap: wrap;
@@ -130,6 +132,7 @@
     display: flex;
     justify-content: center;
     margin-top: 2rem;
+    gap: 1rem;
     .page, .currentPage{
       display: flex;
       justify-content: center;
@@ -137,7 +140,7 @@
       align-self: flex-end;
       width: 5rem;
       height: 5rem;
-      background-color: white;
+      background-color: var(--bg);
       border-radius: 1rem;
       color: #FF868E;
       cursor: pointer;
@@ -145,7 +148,7 @@
       font-size: 2rem;
       &:hover{
         background-color: #FBE0DC;
-        color: white;
+        color: var(--activeBg);
       }
     }
     .currentPage{
