--- a/src/components/c4-header/Header.module.css
+++ b/src/components/c4-header/Header.module.css
@@ -13,7 +13,7 @@
   width: 5rem;
   height: 5rem;
   border-radius: 1rem;
-  background-color: white;
+  background-color: var(--bg);
   cursor: pointer;
 }
 .container .hamburgerContainer .hamburger {
