--- a/src/components/c4-header/Header.module.scss
+++ b/src/components/c4-header/Header.module.scss
@@ -12,7 +12,7 @@
     width: 5rem;
     height: 5rem;
     border-radius: 1rem;
-    background-color: white;
+    background-color: var(--bg);
     cursor: pointer;
     .hamburger{
       width: 2rem;
