--- a/src/App.scss
+++ b/src/App.scss
@@ -78,6 +78,8 @@ html{
   --bgSelect: #F8F8F7;
   --bgOption: #fff;
   --colorOption: #000;
+  --messgaeBg: #F8F8F7;
+  --timeColor: #fff;
 }
 
 .themeDark {
@@ -93,17 +95,6 @@ html{
   --bgSelect: rgba(255, 255, 255, 0.05);
   --bgOption: #292929;
   --colorOption: #8C8C8C;
-
-
-
-
-
-
-
-
-
-
-
-
-
+  --messgaeBg: rgba(255, 255, 255, 0.05);
+  --timeColor: #292929;
 }
