--- a/src/components/c2-greeting/content-item/ContentItem.module.scss
+++ b/src/components/c2-greeting/content-item/ContentItem.module.scss
@@ -1,4 +1,3 @@
-
 .container {
   display: flex;
   flex-direction: column;
@@ -12,7 +11,8 @@
     justify-content: center;
     align-items: center;
   }
-  button{
+
+  .button {
     width: 100%;
     margin-top: 1rem;
     border-radius: 1rem;
@@ -29,10 +29,10 @@
     &:hover{
       background: #FBE0DC;
     }
-    &:active{
-      background: #FF868E;
-      color: white;
-    }
+  }
+  .active {
+    background: #FF868E;
+    color: white;
   }
   .orange {
     background: #FFD280;
