--- a/src/components/c5-navmenu/NavMenu.module.css
+++ b/src/components/c5-navmenu/NavMenu.module.css
@@ -4,7 +4,7 @@
   width: 100%;
   height: 100%;
   padding: 2rem;
-  background-color: #F8F8F7;
+  background-color: var(--bgApp);
   transition: 0.3s;
 }
 .container .closeIconContainer {
@@ -14,11 +14,12 @@
   border-radius: 1rem;
   width: 5rem;
   height: 5rem;
-  background-color: white;
+  background-color: var(--bg);
   cursor: pointer;
 }
 .container .closeIconContainer:hover {
-  background-color: var(--color);
+  background-color: #FF868E;
+  color: white;
 }
 .container .closeIconContainer:hover .closeIcon * {
   fill: white;
