--- a/src/components/c6-voting/Voting.module.scss
+++ b/src/components/c6-voting/Voting.module.scss
@@ -17,7 +17,8 @@
     margin-bottom: 2rem;
 
     span {
-      display: block;
+      display: flex;
+      align-items: center;
       border-radius: 1rem;
       background-color: #FF868E;
       color: white;
@@ -40,7 +41,9 @@
     .img {
       width: 100%;
       height: 100%;
-
+      display: flex;
+      justify-content: center;
+      align-items: center;
       img {
         width: 100%;
         height: 100%;
@@ -75,14 +78,14 @@
       justify-content: flex-start;
       align-items: center;
       padding: 2rem;
-      background-color: var(--bg);
+      background-color: var(--messgaeBg);
       border-radius: 1.2rem;
       gap: 30px;
       transition: .3s;
 
       .date {
         padding: 0.5rem 1rem;
-        background-color: var(--bgApp);
+        background-color: var(--timeColor);
         border-radius: .5rem;
         font-size: 2rem;
       }
@@ -97,6 +100,26 @@
         span {
           font-weight: 500;
           color: var(--color);
+        }
+      }
+      .logo{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        margin-left: auto;
+        & .smile, .sad, .heart{
+          height: 2.5rem;
+          width: 2.5rem;
+        }
+        .smile * {
+          fill: #97EAB9;
+        }
+        .sad * {
+          fill: #FFD280;
+        }
+        .heart * {
+          fill: #FF868E;
         }
       }
     }
