--- a/src/components/c1-common/group-button/GroupButton.module.css
+++ b/src/components/c1-common/group-button/GroupButton.module.css
@@ -52,4 +52,38 @@
   fill: #FF868E;
 }
 
+@media screen and (max-width: 480px) {
+  .content {
+    border-radius: 2rem;
+  }
+  .content .smile, .content .sad, .content .heart {
+    max-height: 5rem;
+    max-width: 5rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+  }
+  .content .smile .img, .content .sad .img, .content .heart .img {
+    height: 2.5rem;
+    width: 2.5rem;
+  }
+  .content .smile {
+    border-radius: 1.5rem 0 0 1.5rem;
+  }
+  .content .sad {
+    border-radius: 0 1.5rem 1.5rem 0;
+  }
+}
+@media screen and (max-width: 768px) {
+  .content .smile, .content .sad, .content .heart {
+    height: 7rem;
+    width: 7rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+  }
+}
+
 /*# sourceMappingURL=GroupButton.module.css.map */
