--- a/src/components/c1-common/group-button/GroupButton.module.scss
+++ b/src/components/c1-common/group-button/GroupButton.module.scss
@@ -1,4 +1,4 @@
-.content{
+.content {
   position: absolute;
   display: flex;
   justify-content: center;
@@ -7,47 +7,101 @@
   background-color: var(--bgBreedName);
   padding: .5rem;
   gap: .5rem;
-  .smile, .sad, .heart{
+
+  .smile, .sad, .heart {
     height: 8rem;
     width: 8rem;
     display: flex;
     justify-content: center;
     align-items: center;
     cursor: pointer;
+
     & > .img * {
       fill: white;
     }
+
     &:active > .img * {
       fill: white;
     }
   }
-  .smile{
+
+  .smile {
     background-color: #97EAB9;
     border-radius: 2.5rem 0 0 2.5rem;
+
     &:hover:not(:active) {
       background-color: #97EAB94D;
     }
+
     &:hover:not(:active) > .img * {
       fill: #97EAB9;
     }
   }
-  .sad{
+
+  .sad {
     background-color: #FFD280;
-    border-radius: 0 2.5rem  2.5rem  0 ;
+    border-radius: 0 2.5rem 2.5rem 0;
+
     &:hover:not(:active) {
       background-color: #FFD2804D;
     }
+
     &:hover:not(:active) > .img * {
       fill: #FFD280;
     }
   }
-  .heart{
+
+  .heart {
     background-color: #FF868E;
+
     &:hover:not(:active) {
       background-color: #FF868E4D;
     }
+
     &:hover:not(:active) > .img * {
       fill: #FF868E;
+    }
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .content {
+    border-radius: 2rem;
+
+    .smile, .sad, .heart {
+      max-height: 5rem;
+      max-width: 5rem;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      cursor: pointer;
+
+      & .img {
+        height: 2.5rem;
+        width: 2.5rem;
+      }
+    }
+
+    .smile {
+      border-radius: 1.5rem 0 0 1.5rem;
+    }
+
+    .sad {
+      border-radius: 0 1.5rem 1.5rem 0;
+    }
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .content {
+    .smile, .sad, .heart {
+      height: 7rem;
+      width: 7rem;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      cursor: pointer;
+
     }
   }
 }
