--- a/src/components/c2-greeting/girl-with-pet/GirlWithPet.module.scss
+++ b/src/components/c2-greeting/girl-with-pet/GirlWithPet.module.scss
@@ -7,13 +7,13 @@
   .background{
     margin: 25px;
     border-radius: 2rem;
-    width: 70rem;
+    width: 68rem;
     height: 83rem;
-    background: var(--bg);
+    background: var(--bgGirlWithPet);
   }
   img{
     position: absolute;
     top: 0; right: 0;
-    height: 100%
+    height: 100%;
   }
 }
