--- a/src/components/c6-voting/Voting.module.css
+++ b/src/components/c6-voting/Voting.module.css
@@ -74,8 +74,8 @@
   padding: 2rem;
   background-color: var(--messgaeBg);
   border-radius: 1.2rem;
-  gap: 30px;
   transition: 0.3s;
+  gap: 1.5rem;
 }
 .container .logMessage .message .date {
   padding: 0.5rem 1rem;
@@ -113,6 +113,41 @@
 }
 .container .logMessage .message .logo .heart * {
   fill: #FF868E;
+}
+
+@media screen and (max-width: 480px) {
+  .container {
+    min-height: 73rem;
+    margin: 1rem 2rem 2rem 2rem;
+  }
+  .container .voting {
+    height: 28rem;
+  }
+  .container .voting .img img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 2.5rem;
+  }
+  .container .voting div {
+    bottom: -3rem;
+  }
+  .container .logMessage .message {
+    justify-content: flex-start;
+    align-items: flex-start;
+    padding: 1.5rem;
+  }
+  .container .logMessage .message .text {
+    font-family: "Jost", sans-serif;
+    text-transform: none;
+    color: #8c8c8c;
+    order: 3;
+    align-self: flex-end;
+  }
+  .container .logMessage .message .text span {
+    font-weight: 500;
+    color: var(--color);
+  }
 }
 
 /*# sourceMappingURL=Voting.module.css.map */
