--- a/src/components/c6-voting/Voting.module.scss
+++ b/src/components/c6-voting/Voting.module.scss
@@ -80,9 +80,8 @@
       padding: 2rem;
       background-color: var(--messgaeBg);
       border-radius: 1.2rem;
-      gap: 30px;
       transition: .3s;
-
+      gap: 1.5rem;
       .date {
         padding: 0.5rem 1rem;
         background-color: var(--timeColor);
@@ -120,6 +119,50 @@
         }
         .heart * {
           fill: #FF868E;
+        }
+      }
+    }
+  }
+}
+@media screen and (max-width: 480px){
+  .container{
+    min-height: 73rem;
+    margin: 1rem 2rem 2rem 2rem;
+    .voting {
+      height: 28rem;
+
+      .img {
+        img {
+          width: 100%;
+          height: 100%;
+          object-fit: cover;
+          border-radius: 2.5rem;
+        }
+      }
+
+      div {
+        bottom: -3rem;
+      }
+    }
+    .logMessage {
+      .message {
+        justify-content: flex-start;
+        align-items: flex-start;
+        padding: 1.5rem;
+
+        .text {
+          font-family: "Jost", sans-serif;
+          text-transform: none;
+          color: #8c8c8c;
+          order: 3;
+          align-self: flex-end;
+          span {
+            font-weight: 500;
+            color: var(--color);
+          }
+        }
+
+        .logo {
         }
       }
     }
